--- a/frontend/src/Components/CSS/CommunityCentre.css
+++ b/frontend/src/Components/CSS/CommunityCentre.css
@@ -1,9 +1,18 @@
 .bundle-location {
-    font-weight: bold;
     margin: 1%;
     margin-bottom: 2%;
     padding: 1%;
     width: 48%;
     position: relative;
     display: inline-flex;
+}
+
+.room-header {
+    font-size: 4vw;
+}
+
+.reward-row {
+    font-weight: normal;
+    margin-top: 2%;
+    font-size: 2vw;
 }
